--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -1,78 +1,8 @@
-:root {
-    /* Paleta de Cores */
-    --cor1: #FBFAFF;
-    --cor2: #F4EFFA;
-    --cor3: #EBD9FC;
-    --cor4: #D4BBFC;
-    --cor5: #9B72CF;
-    --cor6: #9667E0;
-    --cor7: #532B88;
-    --cor8: #2F184B;
-
-    /* Outras cores */
-    --background: var(--cor6);
-}
-
-#navbar {
-    height: 10vh;
-    background-color: var(--background);
-}
-
-#toolbar-icone {
-    height: 100%;
-    width: 20%;
-}
-
-#toolbar-icone-link {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#toolbar-menu {
-    height: 100%;
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5%;
-}
-
-#toolbar-menu > hr {
-    height: 30px;
-    border: 1px solid var(--cor7);
-}
-
-#toolbar-login {
-    height: 100%;
-    width: 20%;
-}
-
-#toolbar-login-link {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-#toolbar-login-link > button {
-    width: 75%;
-    height: 75%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-#toolbar-login-icone {
-    font-size: 5vh;
-    color: var(--cor7);
-}
-
-.link {
+.cursor{
     cursor: pointer;
-    color: var(--cor2);
+    color: white;
+}
+
+.text-decorator-none{
+    text-decoration: none;
 }
