--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -6,3 +6,14 @@
 .text-decorator-none {
     text-decoration: none;
 }
+
+.appbar {
+    height: 7.5vh;
+}
+
+.toolbar {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
